# advent-of-code

01/1/: main.py
02/1/: main.py
02/2/: main.py
03/1/: main.py
03/2/: main.py
05/2/: main.py
06/1/: main.py
07/2/: main.py
08/1/: in  main.py
09/1/: main.py
10/1/: main.py
10/2/: ex.1  in
11/1/: main.py
11/2/: main.py
12/1/: main.py
14/1/: main.py  main.rs
2019/13/: main.py
2020/01/: 01.py  02.py
2020/02/: 01.py  02.py
2020/03/: 01.py
2020/04/: 01.py  02.py
2020/05/: 01.py  02.py
2020/06/: 01.py  02.py
2020/07/: 01.py  02.py
2020/08/: 01.py  02.py
2020/09/: 01.py  02.py
2020/10/: 01.py  02.py
2020/11/: 01.py
2020/12/: 01.py  02.py
2020/13/: 01.py
2020/14/: 01.py
2020/15/: 01.py  02.py
2021/: pyproject.toml
2021/tests/: test_day01.py  test_day02.py  test_day03.py  test_day04.py  test_day05.py  test_day06.py  test_day07.py  test_day08.py  test_day09.py  test_day10.py  test_day11.py  test_day12.py  test_day13.py  test_day14.py  test_day15.py  test_day16.py  test_day17.py
2022/: Cargo.toml
2023/: Cargo.toml
2023/01/: Cargo.toml  __init__.py
2023/02/: Cargo.toml  __init__.py
2023/03/: __init__.py
2023/04/: Cargo.toml
2023/05/: Cargo.toml
2023/06/: Cargo.toml
2024/: .gitignore
rs-2019/: Cargo.toml
rs-2019/day_01/: Cargo.toml
rs-2019/day_01/src/: day_01_01.rs  day_01_02.rs  puzzle_01.rs  puzzle_02.rs
rs-2019/day_02/: Cargo.toml
rs-2019/day_02/src/: puzzle_01.rs  puzzle_02.rs
rs-2019/day_12/: Cargo.toml
rs-2019/day_12/src/: lib.rs  puzzle_01.rs  puzzle_02.rs
rs-2019/day_14/: Cargo.toml
rs-2019/day_14/src/: puzzle_01.rs
(+88 files in other folders)
