[package]
name = "day_01"
version = "0.1.0"
edition = "2018"

[lib]
name = "common"
path = "src/lib.rs"

[[bin]]
name = "day_01_01"
path = "src/day_01_01.rs"

[[bin]]
name = "day_01_02"
path = "src/day_01_02.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"shared" = { path = "../_shared" }