[package]
name = "day_02"
version = "0.1.0"
edition = "2018"

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "d02p01"
path = "src/puzzle_01.rs"

[[bin]]
name = "d02p02"
path = "src/puzzle_02.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
