[package]
name = "day_12"
version = "0.1.0"
edition = "2018"

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "d12p01"
path = "src/puzzle_01.rs"

[[bin]]
name = "d12p02"
path = "src/puzzle_02.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"shared" = { path = "../_shared" }
"nalgebra" = "0.28"